...
    "MIT License" : {

    },
    "Modalities" : {

    },
    "Model" : {

    },
    "Model default" : {

    },
    "Model ID" : {
...
    "Standard" : {

    },
    "Start a conversation with AI using the input field below. Use the attachment button to include files, or access Settings from the toolbar." : {

    },
    "Start Demo" : {

    },
    "Start Explore Demo" : {

    },
    "Start speaking to begin your conversation..." : {
...
    "Voice configuration" : {

    },
    "Voice Mode" : {

    },
    "Voice Mode Settings" : {

    },
    "Voice Note" : {

    },
    "Warning" : {
...
